--- a/main.html
+++ b/main.html
@@ -1,16 +1,24 @@
-<!DOCTYPE html>
-
 <html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+  <head>
+    <title>Facebook Login</title>
+	  <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <!-- Write your code here -->
+	  
+		  <section class="left">
+			  <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook logo">
+			  <p>Facebook helps you connect and share with the people in your life.</p>
+		  </section>
+		  <section class="right">
+			  <form >
+				  <input type="text"  id="email"placeholder="Email address or phone number">
+				  <input type="password" id="password" placeholder="Password">
+				  <button type="submit">Log in</button>
+				  <a href="#">Forgotten account?</a>
+				  <button class="signup">Create new account</button>
+			  </form>
+		  </section>
+	  
+  </body>
 </html>
