--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
 				  <input type="password" id="password" placeholder="Password">
 				  <button type="submit">Log in</button>
 				  <a href="#">Forgotten account?</a>
+				  <div></div>
 				  <button class="signup">Create new account</button>
 			  </form>
 		  </section>
